Fix gaps between tiles (#522)

--- a/resources/css/helioviewer-base.css
+++ b/resources/css/helioviewer-base.css
@@ -68,6 +68,7 @@ a.light:hover {
     left: 0px;
     display: block;
     overflow: visible;
+    mix-blend-mode: plus-lighter;
     -moz-user-select: none;
 }
 
